# vkmax

./: pyproject.toml
vkmax/: client.py
vkmax/functions/: channels.py  chats.py  groups.py  messages.py  uploads.py  users.py
