[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vkmax-async"
version = "2.1.3"
description = "Python client for MAX messenger"
readme = "README.md"
authors = [{ name = "Anastasia Tomson", email = "anastasia.tomson@mail.ru" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["vk", "vkapi", "max-messenger", "vkmax", "oneme"]
dependencies = [
    "websockets",
    "aiohttp"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/AnastasiaTomsonn/vkmax"